Adicionando notificações e funcionalidade de remover postagens e comentarios

--- a/instagram/templates/base.html
+++ b/instagram/templates/base.html
@@ -41,6 +41,7 @@
         <link rel="stylesheet" href="{% static 'css/perfil/link.css' %}">
         <link rel="stylesheet" href="{% static 'css/perfil/input.css' %}">
         <link rel="stylesheet" href="{% static 'css/direct/container.css' %}">
+        <link rel="stylesheet" href="{% static 'css/direct/form.css' %}">
         <link rel="stylesheet" href="{% static 'css/direct/titulo.css' %}">
         <link rel="stylesheet" href="{% static 'css/direct/ul.css' %}">
         <link rel="stylesheet" href="{% static 'css/direct/itens.css' %}">
