--- a/instagram/templates/inbox.html
+++ b/instagram/templates/inbox.html
@@ -20,19 +20,19 @@
                             </ul>
                         {% endif %}
                     </div>
-                    <div class="container_mensage__mensagem">
+                    <div class="container_mensage__mensagem" id="supercontainermensagem">
                         <div class="div_mensage_mensagem">
                             <img class="usuario__postagem usuario__postagem--mensagem" src="{{ perfil.foto.url }}" alt="">
                             <h5 class="nome_user__mensagem nome_user__mensagem--mensage">{{ perfil.nome }}</h5>
                         </div>
-                        <div id="macarraocaralho">
-
+                        <div  id="mensagemconteudo">
+                            
                         </div>
                         <form id="formulario_mensagem" class="formulario_inbox__mensagem" action="{% url 'enviar_mensagem' %}" method="post">{% csrf_token %}
                             <input id="destinatario" type="text" hidden name="" value="{{perfil.pk}}">
                             <input id="emissario" type="text" hidden name="" value="{{request.user.perfil.pk}}">
-                            <input id="mensagem" class="input_text_inbox__mensagem" type="text" name="" id="">
-                            <input id="enivar_mensagem" class="input_submit_inbox__mensagem" type="submit" value="">
+                            <input id="mensagem" class="input_text_inbox__mensagem" type="text" name="" id="" placeholder="Enviar mensagem">
+                            <input id="enivar_mensagem" class="input_submit_inbox__mensagem" type="submit" value="Postar">
                         </form>
                     </div>
                 </div>
@@ -55,7 +55,7 @@
                         csrfmiddlewaretoken: $('input[name=csrfmiddlewaretoken]').val()
                     },
                     success: function(data){
-                        alert(data)
+                        
                     }
                 });
                 mensagem.value = ''
@@ -68,16 +68,17 @@
                     type:'GET',
                     url:'/ler_mensagem/{{perfil.pk}}',
                     success:function(resposta){
-                        $("#macarraocaralho").empty();
+                        $("#mensagemconteudo").empty();
                         for (let mensagem in resposta.messages){ 
-                            let conteudo = "<div><p>"+resposta.messages[mensagem].emissario_nome+"</p><p>"+resposta.messages[mensagem].data+"</p><p>"+resposta.messages[mensagem].conteudo+"</p></div>"; 
-                            $("#macarraocaralho").append(conteudo) 
+                            let conteudo = "<div class='container_inbox__mensagem'><div class='div_inbox__mensagem'><p class='dados_inbox__mensagem'>"+resposta.messages[mensagem].emissario_nome+"</p><p class='dados_inbox__mensagem'>"+resposta.messages[mensagem].data+"</p></div><p class='conteudo_inbox__mensagem'>"+resposta.messages[mensagem].conteudo+"</p></div>"; 
+                            $("#mensagemconteudo").append(conteudo) 
                             }         
                     },
                     error: function(resposta){
                     alert('An error occured')
                     }
                 });
-            },0);
+            },1000);
         </script>
+       
 {% endblock %}
