--- a/setup/static/css/header/titulo.css
+++ b/setup/static/css/header/titulo.css
@@ -19,3 +19,8 @@
     margin-left: 1rem;
     font-weight: bold;
 }
+.titulo_pesquisa__header{
+    margin-left: 1rem;
+    margin-top: 0.5rem;
+    font-weight: bold;
+}
