--- a/setup/static/css/visualizar_post/imagem.css
+++ b/setup/static/css/visualizar_post/imagem.css
@@ -23,5 +23,6 @@
     margin-left: 19rem;
 }
 .icone_remover__post--comentario{
-    margin-right: 4.4rem;
+    margin-right: 3.65rem;
+    margin-left: auto;
 }
