--- a/instagram/templates/partials/header.html
+++ b/instagram/templates/partials/header.html
@@ -4,10 +4,15 @@
     <ul class="container__header">
         <a href="{% url 'index' %}" class="link__header"><li class="titulo__header"><h1>Thingram</h1></li></a>
         <li class="lista__header">
-            <form action="{% url 'busca' %}">
-                <input class="texto__header" type="text" name="busca" id="" placeholder="Busque um perfil">
+            <form id="formulario_busca" action="{% url 'busca' %}">
+                <input class="texto__header" type="text" name="busca" id="buscar" placeholder="Busque um perfil">{% csrf_token %}
                 <input class="botao__header" type="submit"  value="">
             </form>
+            <div id="esconder" hidden>
+                <div id="container__header" class="container_pesquisa__header">
+                   
+                </div>
+            </div>
         </li>
         <div class="div__header">
             <li><h2><a href="{% url 'postar' user.perfil.pk %} "><img class="icone__header" src="{% static 'imagem/postagem-no-instagram.png' %}" alt=""></a></h2></li>
@@ -47,5 +52,45 @@
                 
             }
         }
+    </script>
+    <script>
+        function busca(perfil){
+            $.ajax({
+                type: 'POST',
+                url: '{% url "busca" %}',
+                data:{
+                    csrfmiddlewaretoken: $('input[name=csrfmiddlewaretoken]').val(),
+                    'perfil': perfil
+                },
+                success: function (json){ 
+                    const data = json.data
+                    $('#esconder').empty()
+                    if (Array.isArray(data)){
+                        data.forEach(perfil=>{
+                            
+                            const conteudo =   "<div id='container__header' class='container_pesquisa__header'><div  class='div_pesquisa__header'><a class='link_pesquisa__header'  href=''><img class='imagem__header' src="+perfil.foto+" alt=''><h5 class='titulo_pesquisa__header'>"+perfil.nome+"</h5></a> </div></div>"
+                            $('#esconder').append(conteudo)
+                        })
+                    } else{
+                        if (pesquisa.value.length > 0) {
+                            esconder_div.innerHTML = '<b>'+data+'</b>'
+                        } else {
+                            $('#esconder').prop('hidden','true')
+                        }
+                    }
+                }
+            })
+        }
     </script>   
+    <script>
+        const pesquisa = document.getElementById('buscar')
+        const esconder_div = document.getElementById('esconder')
+        pesquisa.addEventListener('keyup', e =>{
+            console.log(e.target.value)
+            if (esconder_div.hasAttribute('hidden')){
+                esconder_div.removeAttribute('hidden')
+            }
+            busca(e.target.value)
+        })
+    </script>
 </header>
