--- a/setup/static/css/header/div.css
+++ b/setup/static/css/header/div.css
@@ -3,3 +3,13 @@
     padding-right: 10rem;
     margin-left: 10%;
 }
+.container_pesquisa__header{
+    margin-top: 1rem;
+    background-color: #f5f5f5;
+    height: 4rem;
+}
+.div_pesquisa__header{
+    display: flex;
+    padding-top: 1rem;
+    padding-left: 2rem;
+}
