--- a/setup/static/css/login_cadastro/containers.css
+++ b/setup/static/css/login_cadastro/containers.css
@@ -10,11 +10,13 @@
     background-image: url("/static/imagem/pexels-elina-fairytale-3865624.jpg");
     background-repeat: no-repeat;
     background-size: 100% 100%;
-    
-    
 }
 .container_form__login{
     
     border: 1px solid #f5f5f5;
     width: 30rem;
+}
+.container_img__login--cadastro{
+    width: 100%;
+    height: 100%;
 }
