--- a/usuarios/templates/editar_perfil.html
+++ b/usuarios/templates/editar_perfil.html
@@ -13,12 +13,23 @@
                 <label class="label__edita" for="biografia">Bio</label>
                 <input class="input__edita" type="text" name="bio" id="biografia">
                 <label class="label__edita label__edita--foto" for="foto">Adicionar foto</label>        
-                <input class="input__edita" type="file" accept="image/png, image/jpeg" name="foto_perfil" id="foto" hidden value="{{perfil.foto.url}}">   
-                <img class="imagem__edita" src="{{ perfil.foto.url }}" alt="">
+                <input id="foto" class="input__edita" type="file" accept="image/png, image/jpeg" name="foto_perfil" id="foto" hidden value="{{perfil.foto.url}}">   
+                <img id="imagem_perfil" class="imagem__edita" src="{{ perfil.foto.url }}" alt="">
                 <input class="input__publicar input__publicar--button" type="submit" value="Editar">           
             </form>
    
         </main>
     </div>
-   
+    <script>
+        $('#foto').change(function(){
+            const imagem = this.files[0];
+            if (imagem){
+                let ler_imagem = new FileReader();
+                ler_imagem.onload = function (evento){
+                    $('#imagem_perfil').attr('src', evento.target.result)
+                }
+                ler_imagem.readAsDataURL(imagem)
+            }
+        })      
+    </script>
 {% endblock %}
