Incluindo mensagens de resposta para o usuario

--- a/setup/static/css/visualizar_post/container.css
+++ b/setup/static/css/visualizar_post/container.css
@@ -28,3 +28,9 @@
     display: flex;
     
 }
+.container_comentario__postagem--comentario{
+    padding-top: 0.5rem;
+    display: flex;
+    margin-bottom: 0.5rem;
+    margin-left: 59.8rem;
+}
