--- a/instagram/templates/visualizar_post.html
+++ b/instagram/templates/visualizar_post.html
@@ -21,27 +21,18 @@
                         <img onclick="voltar()" id="x" class="icone_perfil__post" src="{% static 'imagem/x.png' %}" alt="">
                     
                 </div>
-                {% if comentarios %}
-                    <ul>
-                        {% for comentario in comentarios %}
-                            <li class="lista__post"> 
-                                <img class="imagem_perfil__post" src="{{ comentario.usuario.foto.url }}" alt="">
-                                <h3 class="titulo_perfil__post">{{ comentario.usuario.nome }}</h3>
-                                <h4 class=" titulo_perfil__post titulo_perfil__post--comentario">{{ comentario.comentario }}</h4>
-                                {% if request.user.perfil.pk == comentario.usuario.pk or user.is_staff %}
-                                    <a id="deletar_comentario" href="#"><img  id="{{comentario.pk}}" class="icone_remover__post icone_remover__post--comentario" src="{% static 'imagem/removido.png' %}" alt=""></a>
-                                {% endif %}    
-                            </li>
-                            
-                        {% endfor %}
-                    </ul>
-                {% endif %}
+                
+                <ul id="comentario_postagem">
+                      
+                </ul>
+                
             </div>
         </div>
         <form id="{{ postagem.id }}" class="container_comentario__postagem--comentario" action="{% url 'comentar' %}" method="post">{% csrf_token %}
             <input  type="text" name="" hidden id="username" value="{{request.user.perfil.id}}">
-            <input class="input_texto__postagem--comentario" type="text" name="comentar" id="{{ postagem.id }}" placeholder="adicione um comentario">
+            <input class="input_texto__postagem--comentario" type="text" name="comentar" id="{{ postagem.id }}" placeholder="adicione um comentario" value="">
             <input class="input_botao__postagem--comentario" type="submit" value="Postar">
+            <input id="resetar" type="reset" value="" hidden>
         </form>
         <script>
             function voltar(){
@@ -52,25 +43,6 @@
     </main>
 </div>
 <script>
-    $("#deletar_comentario").click(function(e){
-        e.preventDefault()
-        const comentario = $(this).find('.icone_remover__post--comentario').attr('id')
-        console.log(comentario)
-        $.ajax({
-            type: 'POST',
-            url: '{% url "deletar_comentario" %}',
-            data: {
-                comentario_id: comentario,
-                csrfmiddlewaretoken: $('input[name=csrfmiddlewaretoken]').val(),
-                
-            },
-            success: function(resposta){
-                location.reload();
-            }
-        })
-    })
-</script>
-<script>
     $("#deletar_postagem").click(function(e){
         e.preventDefault()
         const postagem = $(this).find('.icone_remover__post').attr('id')
@@ -80,8 +52,7 @@
             url: '{% url "deletar" %}',
             data: {
                 postagem_id: postagem,
-                csrfmiddlewaretoken: $('input[name=csrfmiddlewaretoken]').val(),
-                
+                csrfmiddlewaretoken: $('input[name=csrfmiddlewaretoken]').val(),         
             },
             success: function(resposta){
                 window.history.back();
@@ -107,11 +78,65 @@
                 
             },
             success: function(data){
-                location.reload();
+                document.getElementById('resetar').click()
             }
         });
         texto.value = ''      
     });
 </script>
+<script>
+    function buscar_comentario(){
+    
+        const staff = '{{user.is_staff}}'
+        
+        const id = '{{postagem.pk}}'
+        $.ajax({
+            type: 'GET',
+            url:'/ler_comentarios/{{postagem.pk}}',
+            data:{
+                csrfmiddlewaretoken: $('input[name=csrfmiddlewaretoken]').val(),
+                'postagem_id': id
+            },
+            success: function(json){
+                const data = json.data
+                $('#comentario_postagem').empty()
+                if (Array.isArray(data)){
+                    data.forEach(comentario =>{
+                        if (comentario.usuario_atual == comentario.usuario){
+                            let conteudo = '<li class="lista__post"><img class="imagem_perfil__post" src='+comentario.foto+' alt=""><h3 class="titulo_perfil__post">'+comentario.nome+'</h3><h4 class=" titulo_perfil__post titulo_perfil__post--comentario">'+comentario.conteudo+'</h4><a id="deletar_comentario" href="#"><img  id='+comentario.pk+' class="icone_remover__post icone_remover__post--comentario" src="{% static "imagem/removido.png" %}" alt=""></a> </li>'
+                            $('#comentario_postagem').append(conteudo)
+                            $("#deletar_comentario").click(function(e){
+                                e.preventDefault()
+                                const comentario = $(this).find('.icone_remover__post--comentario').attr('id')
+                                console.log(comentario)
+                                $.ajax({
+                                    type: 'POST',
+                                    url: '{% url "deletar_comentario" %}',
+                                    data: {
+                                        comentario_id: comentario,
+                                        csrfmiddlewaretoken: $('input[name=csrfmiddlewaretoken]').val(),
+                                        
+                                    },
+                                    success: function(resposta){ 
+                                    }
+                                })
+                            })
+                        } else{
+                            let conteudo = '<li class="lista__post"><img class="imagem_perfil__post" src='+comentario.foto+' alt=""><h3 class="titulo_perfil__post">'+comentario.nome+'</h3><h4 class=" titulo_perfil__post titulo_perfil__post--comentario">'+comentario.conteudo+'</h4></li>'
+                            $('#comentario_postagem').append(conteudo)
+                        }        
+                    })
 
+                }else{
+                    pass
+                }      
+            }
+        })
+    }
+</script>
+<script>
+    setInterval(function(){
+        buscar_comentario()
+    },1000)
+</script>
 {% endblock %}
