--- a/setup/static/css/visualizar_post/titulo.css
+++ b/setup/static/css/visualizar_post/titulo.css
@@ -7,3 +7,16 @@
     word-wrap: break-word;
     width: 30rem;
 }
+.input_texto__postagem--comentario{
+    width: 50%;
+    background-color: white;
+    border: none;
+    border-radius: 10px;
+}
+.input_botao__postagem--comentario{
+    border-radius: 10px;
+    width: 10%;
+    border: none;
+    margin-left: 1rem;
+    background-color: white;
+}
