--- a/usuarios/templates/cadastro.html
+++ b/usuarios/templates/cadastro.html
@@ -6,18 +6,19 @@
             </a>
             <img class="container_img__login--cadastro" id="imagem_cadastro" src="" alt="" hidden="True">
             <div class="container_form__login">
+                {% include 'partials/alertas.html' %}
                 <H1 class="Titulo__login">Thingram</H1>
-                <form class="form__login" action="{% url 'cadastro' %}" method="POST" enctype="multipart/form-data">{% csrf_token %}
+                <form id="formulario_cadastro" class="form__login" action="{% url 'cadastro' %}" method="POST" enctype="multipart/form-data">{% csrf_token %}
                     <label class="label__login" for=""> Digite aqui o seu email</label>
-                    <input class="input__login--texto" type="email" name="email" id="" placeholder="email">
+                    <input id="emailform" class="input__login--texto" type="email" name="email"  placeholder="email">
                     <label class="label__login" for="">Digite aqui o nome do seu perfil</label>
-                    <input class="input__login--texto" type="text" name="nome" id="" placeholder="seu perfil">
+                    <input id="nomeform" class="input__login--texto" type="text" name="nome"  placeholder="seu perfil">
                     <label class="label__login" for="">Digite aqui a sua senha</label>
-                    <input class="input__login--texto" type="password" name="senha" id="" placeholder="senha">
+                    <input  id="senhaform" class="input__login--texto" type="password" name="senha"  placeholder="senha">
                     <label class="label__login" for="">Digite novamente a sua senha</label>
-                    <input class="input__login--texto" type="password" name="senha2" id="" placeholder="senha">
+                    <input  id="senha2form" class="input__login--texto" type="password" name="senha2"  placeholder="senha">
                     <label class="label__login label__login--foto" for="foto">Adicione uma foto de perfil</label>
-                    <input id="foto" type="file" accept="image/png, image/jpeg" name="foto" hidden>
+                    <input  id="foto" type="file" accept="image/png, image/jpeg" name="foto" hidden  >
                     <input class="input__login--submit" type="submit" value="Cadastrar" >
                 </form>
             </div>
